--- a/index.html
+++ b/index.html
@@ -5,27 +5,46 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+
+  <link rel="stylesheet" href="css/style.css">
   
   <title>Frontend Mentor | Fylo data storage component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+
 </head>
 <body>
+  <div class="container">
 
-  You’ve used 815 GB of your storage
+    <div class="left-side">
+      <div class="box">
+        <div class="logo">
+          <img src="images/logo.svg" alt="">
+        </div>
+        <div class="buttons">
+          <img src="images/icon-document.svg" alt="">
+          <img src="images/icon-folder.svg" alt="">
+          <img src="images/icon-upload.svg" alt="">
+        </div>
+      </div>
+    </div>
 
-  185 GB Left
-  
-  0 GB
-  1000 GB
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    <div class="right-side">
+      <div class="storage-left">
+        <p><strong>185</strong> GB LEFT</p>
+      </div>
+    </div>
+    <div class="box">
+      <p>You’ve used <b>815 GB</b> of your storage</p>
+      <div class="bar">
+        <div class="fill-bar">
+          <div class="circle"></div>
+        </div>
+      </div>
+      <p class="left">0 GB</p>
+      <p class="right">1000 GB</p>
+    </div>
+  </div>
+  <div class="bg">
   </div>
 </body>
 </html>
