--- a/index.html
+++ b/index.html
@@ -21,9 +21,15 @@
           <img src="images/logo.svg" alt="">
         </div>
         <div class="buttons">
-          <img src="images/icon-document.svg" alt="">
+          <div class="btn">
+            <img src="images/icon-document.svg" alt="">
+          </div>
+          <div class="btn">
           <img src="images/icon-folder.svg" alt="">
-          <img src="images/icon-upload.svg" alt="">
+          </div>
+          <div class="btn">
+            <img src="images/icon-upload.svg" alt="">
+          </div>
         </div>
       </div>
     </div>
@@ -32,16 +38,15 @@
       <div class="storage-left">
         <p><strong>185</strong> GB LEFT</p>
       </div>
-    </div>
-    <div class="box">
-      <p>You’ve used <b>815 GB</b> of your storage</p>
-      <div class="bar">
-        <div class="fill-bar">
-          <div class="circle"></div>
+      <div class="right-box">
+        <p>You’ve used <b>815 GB</b> of your storage</p>
+        <div class="bar">
+          <div class="fill-bar">
+          </div>
         </div>
+        <p class="left">0 GB</p>
+        <p class="right">1000 GB</p>
       </div>
-      <p class="left">0 GB</p>
-      <p class="right">1000 GB</p>
     </div>
   </div>
   <div class="bg">
